Remove support for PY2

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {python2.7,python3.6,python3.7}
+    py3{7,8}
 
 [testenv]
 skipsdist = true
@@ -11,7 +11,6 @@ commands =
     python setup.py install
     pytest tests
 deps =
-    six
     python-ldap>=3.0
     dnspython
     ply==3.8
@@ -19,12 +18,12 @@ deps =
     pexpect
 
 [testenv:pep8]
-description = Run PEP8 pycodestyle (flake8) against the djxml/ package directory
+description = Run PEP8 (flake8) against the lib directory
 skipsdist = true
 skip_install = true
 basepython = python3.7
-deps = pycodestyle
-commands = pycodestyle lib/activedirectory
+deps = flake8
+commands = flake8 lib/activedirectory
 
 [testenv:clean]
 description = Clean all build and test artifacts
